Fix navbar z-index bug and change color on projects online link

--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -7,7 +7,7 @@ nav {
     background: $primary-color;
     width: 100%;
     height:60px;
-    // padding-top: em(10px);
+    z-index: 100;
 }
 
 .contact-nav {
